--- a/Alsoft.Recruitment.FoodStore.App/Alsoft.Recruitment.FoodStore.App.csproj
+++ b/Alsoft.Recruitment.FoodStore.App/Alsoft.Recruitment.FoodStore.App.csproj
@@ -2,11 +2,14 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <StartupObject>Alsoft.Recruitment.FoodStore.Api.Program</StartupObject>
+    <OutputType>Exe</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="10.0.1" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.17">
       <PrivateAssets>all</PrivateAssets>
@@ -17,12 +20,14 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Alsoft.Recruitment.FoodStore.DAL\Alsoft.Recruitment.FoodStore.DAL.csproj" />
-    <ProjectReference Include="..\Alsoft.Recruitment.FoodStore.Modules\Alsoft.Recruitment.FoodStore.Modules.Basket.csproj" />
+    <ProjectReference Include="..\Modules\Basket\Alsoft.Recruitment.FoodStore.Modules.Basket.csproj" />
+    <ProjectReference Include="..\Modules\Product\Alsoft.Recruitment.FoodStore.Modules.Product\Alsoft.Recruitment.FoodStore.Modules.Product.csproj" />
   </ItemGroup>
 
 </Project>
