--- a/Alsoft.Recruitment.FoodStore.DAL/Alsoft.Recruitment.FoodStore.DAL.csproj
+++ b/Alsoft.Recruitment.FoodStore.DAL/Alsoft.Recruitment.FoodStore.DAL.csproj
@@ -12,6 +12,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.17" />
+    <PackageReference Include="NuGet.Protocol" Version="6.2.1" />
   </ItemGroup>
 
   <ItemGroup>
