Add in-memory database support and refactor discounts
- Updated project files to include `Microsoft.EntityFrameworkCore.InMemory` for in-memory database testing.
- Modified `Startup.cs` to configure the in-memory database and added Swagger for API documentation.
- Introduced `appsettings.json` for API URL management and updated `BasketAppViewModel` to use configuration.
- Created `Seeds.cs` to seed the in-memory database with initial data.
- Refactored discount decorators to improve discount application logic.
- Streamlined project structure by removing unnecessary model folders.

--- a/Alsoft.Recruitment.FoodStore.UI/Alsoft.Recruitment.FoodStore.UI/Alsoft.Recruitment.FoodStore.UI.csproj
+++ b/Alsoft.Recruitment.FoodStore.UI/Alsoft.Recruitment.FoodStore.UI/Alsoft.Recruitment.FoodStore.UI.csproj
@@ -10,6 +10,8 @@
   <ItemGroup>
     <PackageReference Include="Flurl" Version="3.0.6" />
     <PackageReference Include="Flurl.Http" Version="3.2.4" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.4" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.4" />
     <PackageReference Include="Microsoft.Toolkit.Mvvm" Version="7.0.0" />
     <PackageReference Include="System.Reactive" Version="5.0.0" />
   </ItemGroup>
@@ -18,6 +20,12 @@
     <ProjectReference Include="..\..\Alsoft.Recruitment.FoodStore.Entities\Alsoft.Recruitment.FoodStore.Entities.csproj" />
     <ProjectReference Include="..\..\Modules\Basket\Alsoft.Recruitment.FoodStore.Modules.Basket.csproj" />
     <ProjectReference Include="..\..\Modules\Product\Alsoft.Recruitment.FoodStore.Modules.Product\Alsoft.Recruitment.FoodStore.Modules.Product.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
