--- a/Alsoft.Recruitment.FoodStore.DAL/Alsoft.Recruitment.FoodStore.DAL.csproj
+++ b/Alsoft.Recruitment.FoodStore.DAL/Alsoft.Recruitment.FoodStore.DAL.csproj
@@ -10,6 +10,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.17" />
     <PackageReference Include="NuGet.Protocol" Version="6.2.1" />
