--- a/Modules/Product/Alsoft.Recruitment.FoodStore.Modules.Product/Alsoft.Recruitment.FoodStore.Modules.Product.csproj
+++ b/Modules/Product/Alsoft.Recruitment.FoodStore.Modules.Product/Alsoft.Recruitment.FoodStore.Modules.Product.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Model\**" />
+    <EmbeddedResource Remove="Model\**" />
+    <None Remove="Model\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="MediatR" Version="10.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
   </ItemGroup>
@@ -12,10 +18,6 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\Alsoft.Recruitment.FoodStore.Abstractions\Alsoft.Recruitment.FoodStore.Abstractions.csproj" />
     <ProjectReference Include="..\..\..\Alsoft.Recruitment.FoodStore.DAL\Alsoft.Recruitment.FoodStore.DAL.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Model\" />
   </ItemGroup>
 
 </Project>
