Update UI project structure and implement DI
- Corrected project reference paths in `Alsoft.Recruitment.FoodStore.UI.csproj` and added new package references for `Flurl`, `Microsoft.Extensions.Configuration`, and `Microsoft.Toolkit.Mvvm`.
- Changed project type to WPF targeting .NET 5.0.
- Defined application class and resources in `App.xaml`, and added `App.xaml.cs` for dependency injection setup.
- Removed `AssemblyInfo.cs`.
- Updated `MainWindow.xaml` and added `MainWindow.xaml.cs` to set data context and define UI layout.
- Created `BasketAppViewModel.cs` for managing application data and business logic.
- Added `appsettings.json` for API URL configuration.
- Created `start.bat` for automating UI project startup.
- Updated solution and launch files to reflect project structure changes.

--- a/Alsoft.Recruitment.FoodStore.UI/Alsoft.Recruitment.FoodStore.UI.csproj
+++ b/Alsoft.Recruitment.FoodStore.UI/Alsoft.Recruitment.FoodStore.UI.csproj
@@ -17,9 +17,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Alsoft.Recruitment.FoodStore.Entities\Alsoft.Recruitment.FoodStore.Entities.csproj" />
-    <ProjectReference Include="..\..\Modules\Basket\Alsoft.Recruitment.FoodStore.Modules.Basket.csproj" />
-    <ProjectReference Include="..\..\Modules\Product\Alsoft.Recruitment.FoodStore.Modules.Product.csproj" />
+    <ProjectReference Include="..\Modules\Basket\Alsoft.Recruitment.FoodStore.Modules.Basket.csproj" />
+    <ProjectReference Include="..\Modules\Product\Alsoft.Recruitment.FoodStore.Modules.Product\Alsoft.Recruitment.FoodStore.Modules.Product.csproj" />
   </ItemGroup>
 
   <ItemGroup>
